# s3mplay

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: CMakeLists.txt  FindSDL2TTF.cmake
src/libs3m/: CMakeLists.txt  channel.c  channel.h  pattern.c  s3m.c  s3m.h  s3m_file.c  s3m_info.c  s3m_sound.c
src/s3mplay/: CMakeLists.txt  main.cpp
